# autoagent_adk

./: .dockerignore  .env  .env.example  .gitignore  ADK_INTEGRATION_LESSONS_LEARNED.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  GOOGLE_ADK_INTEGRATION_PLAN.md  README.md  SPEC.md  agents.md  config.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.py  test_adk_integration.py  test_backend.py
.skills/: chart_generator.md  code_reviewer.md  code_writer.md  content_summarizer.md  data_query.md  web_search.md
backend/: .env.example  __init__.py  demo.py  main.py  setup.py
backend/agents/: __init__.py  adk_adapter.py  adk_agents.py  intent_classifier.py  tool_executor.py  workflow_planner.py
backend/config/: __init__.py  settings.py
backend/models/: __init__.py  schemas.py
backend/skills/: __init__.py  skill_loader.py
backend/tools/: __init__.py  data_analysis.py  file_processor.py  guardrails.py  maps.py  rag.py  registry.py
backend/utils/: __init__.py  helpers.py
backend/workflows/: __init__.py  base.py  code_gen.py  data_analysis.py  general_chat.py  research.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatArea.jsx  Sidebar.jsx  ToolsPanel.jsx
frontend/src/stores/: chatStore.js
frontend/src/styles/: app.css  global.css
nexus-frontend/: .npmrc
suggestions/: __init__.py  adk_agents.py  adk_audit_report.md
